# sparrow-initialize

./: Cargo.toml  README.md  build.sh  config
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs
